--- a/taskManager/pom.xml
+++ b/taskManager/pom.xml
@@ -46,14 +46,9 @@
 				<artifactId>spring-boot-starter-data-jpa</artifactId>
 			</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
+			<version>42.7.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
