--- a/taskManager/src/main/resources/application.properties
+++ b/taskManager/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 server.port=8080
-stats-server.url=http://localhost:8080
-spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/task_manager_db
 spring.datasource.username=test
 spring.datasource.password=test
-#---
-spring.config.activate.on-profile=ci,test
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
