--- a/taskManager/src/main/resources/application.properties
+++ b/taskManager/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/task_manager_db
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.url=jdbc:postgresql://task_manager_db:5432/task_manager_db
+spring.datasource.username= postgres
+spring.datasource.password= test
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
